Haleyouth foundation page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-express",
+  "name": "haleyouth.github.io",
   "version": "1.0.0",
   "homepage": "https://haleyouth.github.io/haleyouth",
   "type": "module",
