--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "haleyouth.github.io",
   "version": "1.0.0",
-  "homepage": "https://haleyouth.github.io/haleyouth",
+  "homepage": "https://haleyouth.github.io",
   "type": "module",
   "license": "MIT",
   "scripts": {
@@ -9,7 +9,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist/public",
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
